--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android App Development Exam</title>
+
+    <div class="pdf-section">
+        <h2>Reviewer PDFs</h2>
+        <p>Download the following PDF reviewers to study for the exam:</p>
+        <ul>
+            <li><a href="https://limewire.com/d/lsOBI#8MaQSR5D5p" download="Mobile_Apps_Overview.pdf" class="download-btn">Download PDFs</a></li>
+        </ul>
+    </div>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
